--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,4 @@ steps:
     npm install
     npm run build
     npm text
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: '**/TEST-*.xml'
-  displayName: 'npm install and build'
+- displayName: 'Npm install and Build'
